fixed: horizontal scroll, share buttons z-index

--- a/css/application.css
+++ b/css/application.css
@@ -58,7 +58,7 @@ p {
 .social-icons {
   position: fixed;
   padding-top: 10px;
-  z-index: 1000; }
+  z-index: 100001; }
 
 .fa-twitter,
 .fa-facebook {
