--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -19,7 +19,7 @@
 .social-icons {
   position: fixed;
   padding-top: 10px;
-  z-index: 1000;
+  z-index: 100001;
 }
 
 .fa-twitter,
